@@ -205,6 +205,14 @@ void hollow_rect(const int x1, const int y1, const int x2, const int y2)
     Display::renderDC -> DrawRectangle( x1, y1, x2-x1, y2-y1 );
     updateBrush();
 }
+    
+void select_rect(const int x1, const int y1, const int x2, const int y2)
+{
+    AriaRender::color(0,0,0);
+    disableBrush();
+    Display::renderDC -> DrawRectangle( x1, y1, x2-x1, y2-y1 );
+    updateBrush();
+}
 
 void triangle(const int x1, const int y1, const int x2, const int y2, const int x3, const int y3)
 {
